# fty-srr

./: .dependencies-graph.dot.part  .gitignore  .travis.yml  CMakeLists.txt  Findaugeas.cmake  Findfty_common_logging.cmake  Findfty_proto.cmake  Findlibxml_2_0.cmake  Findlog4cplus.cmake  Jenkinsfile  Makefile.am  Makefile.in  README.md  aclocal.m4  ci_build.sh  ci_dependencies.sh  ci_deploy.sh  ci_deploy_obs.sh  configure  configure.ac  project.xml
autom4te.cache/: output.0  output.3  requests  traces.0  traces.2  traces.3
builds/check_zproject/: ci_build.sh
builds/cmake/: ci_build.sh
cmd/: CMakeLists.txt
cmd/src/: fty-srr-cmd.cc
doc/: .gitignore  Makefile.am  Makefile.in  asciidoc.conf  fty-srr.adoc
include/: Makefile.am  Makefile.in  fty-srr.h  fty_srr.h  fty_srr_exception.h  fty_srr_library.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  timestamps-10.130.34.236-admin-4222  timestamps-user-xav-master.mbt.lab.etn.com-admin-4222
packaging/debian/: changelog  control  copyright  fty-srr.dsc.obs  fty-srr.install  fty-srr.manpages  libfty-srr-dev.install  libfty-srr0.install  rules
packaging/redhat/: fty-srr.spec
server/: CMakeLists.txt  fty-srr-reboot.sh  fty-srr.cfg  fty-srr.service.in
server/include/: fty-srr.h  fty_srr_exception.h  fty_srr_groups.h  fty_srr_manager.h  fty_srr_worker.h
server/include/dto/: common.h  request.h  response.h
server/include/helpers/: data_integrity.h  utils.h  utilsReauth.h
server/src/: fty-srr-cmd.cc  fty-srr.cc  fty_srr_groups.cc  fty_srr_manager.cc  fty_srr_worker.cc  locale_en_US.json
server/src/dto/: common.cc  request.cc  response.cc
server/src/helpers/: data_integrity.cc  utils.cc  utilsReauth.cc
server/sudoers/: fty_20_srr
src/: .gitignore  Makemodule.am  fty-srr-cmd.cc  fty-srr-test.cfg.in  fty-srr-test.service.in  fty-srr.cc  fty-srr.cfg.in  fty-srr.service.in  fty_srr.cc  fty_srr.cfg.in  fty_srr.service.in  fty_srr_classes.h  fty_srr_manager.cc  fty_srr_manager.h  fty_srr_private_selftest.c  fty_srr_private_selftest.cc  fty_srr_selftest.c  fty_srr_selftest.cc  fty_srr_test.cc  fty_srr_worker.cc  fty_srr_worker.h  libfty_srr.pc.in  platform.h.in
